Added new content

--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -1,78 +1,119 @@
+<!--<section class="section padding-60 top">-->
+
+<!--<div class="container container-wide">-->
+
+<!--<h6 class="margin-b-50">{{ 'ABOUT.OVERVIEW' | translate }}</h6>-->
+
+<!--<div class="row padding-lg">-->
+
+<!--<div class="col-md-4 col-sm-6 col-xs-12">-->
+
+<!--<span class="icon"><i class="fa fa-laptop text-blue"></i></span>-->
+
+<!--<h4><strong>{{ 'JOB' | translate }}</strong></h4>-->
+
+<!--<p class="lead">{{ 'ABOUT.JOB_TEXT' | translate }}</p>-->
+
+<!--</div>-->
+
+<!--<div class="col-md-4 col-sm-6 col-xs-12">-->
+
+<!--<span class="icon"><i class="fa fa-graduation-cap text-blue"></i></span>-->
+
+<!--<h4><strong>{{ 'EDUCATION' | translate }}</strong></h4>-->
+
+<!--<p class="lead">{{ 'ABOUT.EDUCATION_TEXT' | translate }}</p>-->
+
+<!--</div>-->
+<!--<div class="col-md-4 col-sm-6 col-xs-12">-->
+
+<!--<span class="icon"><i class="fa fa-flask text-blue"></i></span>-->
+
+<!--<h4><strong>{{ 'RESEARCH' | translate }}</strong></h4>-->
+
+<!--<p class="lead">{{ 'ABOUT.RESEARCH_TEXT' | translate }}</p>-->
+
+<!--</div>-->
+
+<!--</div>-->
+
+<!--</div>-->
+
+<!--</section>-->
+
 <section class="section padding-60 top">
-    <div class="row">
 
-        <div class="col-lg-4">
-            <div class="text-center">
-                <i class="fa fa-3x fa-laptop"></i>
+    <div class="container container-wide">
 
-                <h3>{{ 'JOB' | translate }}</h3>
+        <h6 class="margin-b-50">{{ 'ABOUT.RESUME' | translate }}</h6>
 
-                <p><strong>{{ 'ABOUT.JOB' | translate }}</strong></p>
+        <div class="row padding-lg">
 
-                <p class="text-justify">{{ 'ABOUT.JOB_TEXT' | translate }}</p>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+
+                <!-- Resume Box / About -->
+
+                <!-- Resume Box / Skills -->
+
             </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="text-center">
-                <i class="fa fa-3x fa-graduation-cap"></i>
 
-                <h3>{{ 'EDUCATION' | translate }}</h3>
+            <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <p><strong>{{ 'ABOUT.EDUCATION' | translate }}</strong></p>
+                <!-- Resume Box / Jobs -->
 
-                <p class="text-justify">{{ 'ABOUT.EDUCATION_TEXT' | translate }}</p>
+                <!-- Resume Box / Education -->
+
             </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="text-center">
-                <i class="fa fa-3x fa-flask"></i>
 
-                <h3>{{ 'RESEARCH' | translate }}</h3>
+            <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <p><strong>{{ 'ABOUT.RESEARCH' | translate }}</strong></p>
+                <!-- Resume Box / Languages -->
 
-                <p class="text-justify">{{ 'ABOUT.RESEARCH_TEXT' | translate }}</p>
+
+                <!-- Resume Box / Hobbies -->
+                <div class="resume-box">
+                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i class="fa fa-camera"></i></span>
+                    <h4><strong>{{ 'ABOUT.INTERESTS' | translate }}</strong></h4>
+                    <ul class="list-inline">
+                        <li>
+                            <div class="icon-box text-center">
+                                <span class="icon icon-sm icon-circle icon-primary icon-filled"><i
+                                        class="fa fa-heartbeat"></i></span>
+                                <span class="title">{{ 'FITNESS' | translate }}</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon-box text-center">
+                                <span class="icon icon-sm icon-circle icon-primary icon-filled"><i
+                                        class="fa fa-suitcase"></i></span>
+                                <span class="title">{{ 'TRAVEL' | translate }}</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon-box text-center">
+                                <span class="icon icon-sm icon-circle icon-primary icon-filled"><i
+                                        class="fa fa-camera"></i></span>
+                                <span class="title">{{ 'PHOTOGRAPHY' | translate }}</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="icon-box text-center">
+                                <span class="icon icon-sm icon-circle icon-primary icon-filled"><i
+                                        class="fa fa-cutlery"></i></span>
+                                <span class="title">{{ 'COOKING' | translate }}</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
-        </div>
 
-    </div>
-</section>
-
-<section class="section padding-60">
-    <div class="row">
-
-        <div class="col-lg-4">
-            <div class="text-center">
-                <i class="fa fa-3x fa-heartbeat"></i>
-
-                <h3>{{ 'FITNESS' | translate }}</h3>
-
-                <p class="text-justify">{{ 'ABOUT.FITNESS_TEXT' | translate }}</p>
-            </div>
-        </div>
-
-        <div class="col-lg-4">
-            <div class="text-center">
-                <i class="fa fa-3x fa-suitcase"></i>
-
-                <h3>{{ 'ABOUT.TRAVEL' | translate }}</h3>
-
-                <p class="text-justify">{{ 'ABOUT.TRAVEL_TEXT' | translate }}</p>
-            </div>
-        </div>
-
-        <div class="col-lg-4">
-            <div class="text-center">
-                <i class="fa fa-3x fa-cutlery"></i>
-
-                <h3>{{ 'ABOUT.COOKING' | translate }}</h3>
-
-                <p class="text-justify">{{ 'ABOUT.COOKING_TEXT' | translate }}</p>
-            </div>
         </div>
 
     </div>
+
 </section>
+
 
 <!-- Section - Resume -->
 <!--<section id="resume" class="section padding-v-60">-->
