--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -6,12 +6,11 @@
 
     <!-- Middle -->
     <div class="container container-wide v-bottom padding-v-80">
-        <h1 class="text-lg margin-b-0">{{ 'HOME.WELCOME' | translate }} <strong>{{ 'HOME.NAME' | translate }}</strong>
+        <h1 class="text-lg margin-b-0">{{ 'HOME.GREETING' | translate }} <strong>{{ 'HOME.TITLE' | translate }}</strong>
         </h1>
-        <h5 class="margin-b-40">{{ 'HOME.JOB_TITLE' | translate }}</h5>
-        <span><a href="#/about" class="btn btn-lg btn-primary"><span>{{ 'ABOUT' | translate }}</span><i
+        <h5 class="margin-b-40">{{ 'HOME.DESCRIPTION' | translate }}</h5>
+        <span><a href="#/about" class="btn btn-lg btn-primary"><span>{{ 'ABOUT.ABOUT' | translate }}</span><i
                 class="ti-user"></i></a></span>
-        <a href="#" class="btn btn-link"><span>{{ 'CV' | translate }}</span><i class="ti-file"></i></a>
     </div>
 
 </section>
@@ -21,7 +20,7 @@
 
     <div class="container container-wide">
 
-        <h6 class="margin-b-50">{{ 'SERVICES' | translate }}</h6>
+        <h6 class="margin-b-50">{{ 'HOME.SERVICES' | translate }}</h6>
 
         <div class="row padding-lg">
 
@@ -29,9 +28,9 @@
 
                 <span class="icon"><i class="fa fa-pencil text-blue"></i></span>
 
-                <h4><strong>{{ 'DESIGN' | translate }}</strong></h4>
+                <h4><strong>{{ 'SERVICES.DESIGN' | translate }}</strong></h4>
 
-                <p class="lead">{{ 'DESIGN_TEXT' | translate }}</p>
+                <p class="lead">{{ 'SERVICES.DESIGN_TEXT' | translate }}</p>
 
             </div>
 
@@ -39,9 +38,9 @@
 
                 <span class="icon"><i class="fa fa-code text-blue"></i></span>
 
-                <h4><strong>{{ 'DEVELOPMENT' | translate }}</strong></h4>
+                <h4><strong>{{ 'SERVICES.DEVELOPMENT' | translate }}</strong></h4>
 
-                <p class="lead">{{ 'DEVELOPMENT_TEXT' | translate }}</p>
+                <p class="lead">{{ 'SERVICES.DEVELOPMENT_TEXT' | translate }}</p>
 
 
             </div>
@@ -49,9 +48,9 @@
 
                 <span class="icon"><i class="fa fa-bar-chart text-blue"></i></span>
 
-                <h4><strong>{{ 'ANALYTICS' | translate }}</strong></h4>
+                <h4><strong>{{ 'SERVICES.ANALYTICS' | translate }}</strong></h4>
 
-                <p class="lead">{{ 'ANALYTICS_TEXT' | translate }}</p>
+                <p class="lead">{{ 'SERVICES.ANALYTICS_TEXT' | translate }}</p>
 
             </div>
 
@@ -65,7 +64,7 @@
 
     <div class="container container-wide">
 
-        <h6 class="margin-b-50">{{ 'FRAMEWORKS_TECHNOLOGIES' | translate }}</h6>
+        <h6 class="margin-b-50">{{ 'HOME.FRAMEWORKS_TECHNOLOGIES' | translate }}</h6>
 
         <div class="row padding-lg">
 
@@ -77,7 +76,7 @@
 
                 <h4><strong>AngularJS</strong></h4>
 
-                <p>{{ 'ANGULAR_TEXT' | translate }}</p>
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.ANGULAR_TEXT' | translate }}</p>
 
             </div>
 
@@ -89,55 +88,7 @@
 
                 <h4><strong>NodeJS</strong></h4>
 
-                <p>{{ 'NODEJS_TEXT' | translate }}</p>
-
-            </div>
-
-            <div class="col-md-4 col-sm-6 col-xs-12">
-
-                <span class="icon">
-                    <img src="images/play.png" class="img-home"></i>
-                </span>
-
-                <h4><strong>Play Framework</strong></h4>
-
-                <p>{{ 'PLAY_TEXT' | translate }}</p>
-
-            </div>
-
-            <div class="col-md-4 col-sm-6 col-xs-12">
-
-                <span class="icon">
-                    <img src="images/ios.png" class="img-home"></i>
-                </span>
-
-                <h4><strong>iOS</strong></h4>
-
-                <p>{{ 'IOS_TEXT' | translate }}</p>
-
-            </div>
-
-            <div class="col-md-4 col-sm-6 col-xs-12">
-
-                <span class="icon">
-                    <img src="images/javaee.png" class="img-home"></i>
-                </span>
-
-                <h4><strong>Jave EE</strong></h4>
-
-                <p>{{ 'JAVAEE_TEXT' | translate }}</p>
-
-            </div>
-
-            <div class="col-md-4 col-sm-6 col-xs-12">
-
-                <span class="icon">
-                    <img src="images/aspnet.png" class="img-home"></i>
-                </span>
-
-                <h4><strong>ASP.NET</strong></h4>
-
-                <p>{{ 'ASPNET_TEXT' | translate }}</p>
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.NODEJS_TEXT' | translate }}</p>
 
             </div>
 
@@ -149,7 +100,67 @@
 
                 <h4><strong>MongoDB</strong></h4>
 
-                <p>{{ 'MONGO_TEXT' | translate }}</p>
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.MONGO_TEXT' | translate }}</p>
+
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+
+                <span class="icon">
+                    <img src="images/ios.png" class="img-home"></i>
+                </span>
+
+                <h4><strong>iOS</strong></h4>
+
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.IOS_TEXT' | translate }}</p>
+
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+
+                <span class="icon">
+                    <img src="images/ionic.png" class="img-home"></i>
+                </span>
+
+                <h4><strong>Ionic</strong></h4>
+
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.IONIC_TEXT' | translate }}</p>
+
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+
+                <span class="icon">
+                    <img src="images/play.png" class="img-home"></i>
+                </span>
+
+                <h4><strong>Play Framework</strong></h4>
+
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.PLAY_TEXT' | translate }}</p>
+
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+
+                <span class="icon">
+                    <img src="images/javaee.png" class="img-home"></i>
+                </span>
+
+                <h4><strong>Jave EE</strong></h4>
+
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.JAVAEE_TEXT' | translate }}</p>
+
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+
+                <span class="icon">
+                    <img src="images/aspnet.png" class="img-home"></i>
+                </span>
+
+                <h4><strong>ASP.NET</strong></h4>
+
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.ASPNET_TEXT' | translate }}</p>
 
             </div>
 
@@ -161,13 +172,14 @@
 
                 <h4><strong>Apache Spark</strong></h4>
 
-                <p>{{ 'SPARK_TEXT' | translate }}</p>
+                <p>{{ 'FRAMEWORKS_TECHNOLOGIES.SPARK_TEXT' | translate }}</p>
 
             </div>
 
         </div>
 
     </div>
+
 
 </section>
 
