Added some portfolio items

--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -1,46 +1,3 @@
-<!--<section class="section padding-60 top">-->
-
-<!--<div class="container container-wide">-->
-
-<!--<h6 class="margin-b-50">{{ 'ABOUT.OVERVIEW' | translate }}</h6>-->
-
-<!--<div class="row padding-lg">-->
-
-<!--<div class="col-md-4 col-sm-6 col-xs-12">-->
-
-<!--<span class="icon"><i class="fa fa-laptop text-blue"></i></span>-->
-
-<!--<h4><strong>{{ 'JOB' | translate }}</strong></h4>-->
-
-<!--<p class="lead">{{ 'ABOUT.JOB_TEXT' | translate }}</p>-->
-
-<!--</div>-->
-
-<!--<div class="col-md-4 col-sm-6 col-xs-12">-->
-
-<!--<span class="icon"><i class="fa fa-graduation-cap text-blue"></i></span>-->
-
-<!--<h4><strong>{{ 'EDUCATION' | translate }}</strong></h4>-->
-
-<!--<p class="lead">{{ 'ABOUT.EDUCATION_TEXT' | translate }}</p>-->
-
-<!--</div>-->
-<!--<div class="col-md-4 col-sm-6 col-xs-12">-->
-
-<!--<span class="icon"><i class="fa fa-flask text-blue"></i></span>-->
-
-<!--<h4><strong>{{ 'RESEARCH' | translate }}</strong></h4>-->
-
-<!--<p class="lead">{{ 'ABOUT.RESEARCH_TEXT' | translate }}</p>-->
-
-<!--</div>-->
-
-<!--</div>-->
-
-<!--</div>-->
-
-<!--</section>-->
-
 <section class="section padding-60 top">
 
     <div class="container container-wide">
@@ -148,7 +105,7 @@
                     <about-skill value="70" title="NodeJs"></about-skill>
                     <about-skill value="50" title="JavaEE"></about-skill>
                     <about-skill value="50" title="Play Framework"></about-skill>
-                    <about-skill value="50" title=".NET"></about-skill>
+                    <about-skill value="50" title="ASP.NET"></about-skill>
                     <about-skill value="30" title="Spring"></about-skill>
                     <h6><strong>{{ 'SKILLS.MOBILE_DEVELOPMENT' | translate}}</strong></h6>
                     <about-skill value="50" title="Ionic"></about-skill>
@@ -172,12 +129,6 @@
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
-
-                <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
-                            class="fa fa-download"></i></span>
-                    <a href="resources/cv.pdf" class="btn btn-primary" target="_blank"><span>{{ 'ABOUT.DOWNLOAD' | translate }}</span><i class="ti-file"></i></a>
-                </div>
 
                 <!-- Resume Box / Certifications -->
                 <div class="resume-box">
@@ -226,6 +177,13 @@
                             <about-interest title="INTERESTS.COOKING" icon="fa-cutlery"></about-interest>
                         </li>
                     </ul>
+                </div>
+
+                <!-- Resume Box / Download -->
+                <div class="resume-box">
+                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                            class="fa fa-download"></i></span>
+                    <a href="resources/cv.pdf" class="btn btn-primary" target="_blank"><span>{{ 'ABOUT.DOWNLOAD' | translate }}</span><i class="ti-file"></i></a>
                 </div>
 
             </div>
