--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -6,6 +6,7 @@
 
     <!-- Middle -->
     <div class="container container-wide v-bottom padding-v-80">
+        <img class="img-circle img-profile margin-b-20" />
         <h1 class="text-lg margin-b-0">{{ 'HOME.GREETING' | translate }} <strong>{{ 'HOME.TITLE' | translate }}</strong>
         </h1>
         <h5 class="margin-b-40">{{ 'HOME.DESCRIPTION' | translate }}</h5>
