--- a/client/components/projects/projects.html
+++ b/client/components/projects/projects.html
@@ -4,43 +4,40 @@
 
         <h6 class="margin-b-50">{{ 'PROJECTS.PORTFOLIO' | translate }}</h6>
 
-        <div class="row masonry">
-
-            <!-- Masonry Sizer -->
-            <div class="masonry-sizer col-lg-3 col-sm-6 col-xs-12"></div>
+        <div class="row padding-lg">
 
             <!-- Masonry Element -->
-            <div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">
+            <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.INBITS" description="PROJECTS.INBITS.CAPTION"
                                url="/components/projects/portfolio/inbits.html"
                                image="/images/gallery-inbits.png"></projects-item>
             </div>
 
-            <div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">
+            <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.FRAUNHOFER" description="PROJECTS.FRAUNHOFER.CAPTION"
                                url="/components/projects/portfolio/fraunhofer.html"
                                image="/images/gallery-fraunhofer.png"></projects-item>
             </div>
 
-            <div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">
+            <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.SYMBIO" description="PROJECTS.SYMBIO.CAPTION"
                                url="/components/projects/portfolio/symbio.html"
                                image="/images/gallery-symbio.png"></projects-item>
             </div>
 
-            <div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">
+            <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.COCAMA" description="PROJECTS.COCAMA.CAPTION"
                                url="/components/projects/portfolio/cocama.html"
                                image="/images/gallery-cocama.png"></projects-item>
             </div>
 
-            <div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">
+            <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.COUBR" description="PROJECTS.COUBR.CAPTION"
                                url="/components/projects/portfolio/coubr.html"
                                image="/images/gallery-coubr.jpg"></projects-item>
             </div>
 
-            <div class="masonry-item margin-b-30 col-lg-6 col-sm-12 col-xs-12">
+            <div class="margin-b-30 col-lg-6 col-sm-12 col-xs-12">
                 <projects-item title="PROJECTS.HOMEPAGE" description="PROJECTS.HOMEPAGE.CAPTION"
                                url="/components/projects/portfolio/homepage.html"
                                image="/images/gallery-homepage.png"></projects-item>
@@ -407,7 +404,4 @@
 <!--</div>-->
 <!--</div>-->
 <!--</div>-->
-
-
-<load-template></load-template>
 
