--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -10,7 +10,7 @@
 
                 <!-- Resume Box / About -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-user"></i></span>
                     <h4><strong>{{ 'ABOUT.SUMMARY' | translate }}</strong></h4>
 
@@ -23,7 +23,7 @@
 
                 <!-- Resume Box / Jobs -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-suitcase"></i></span>
                     <h4><strong>{{ 'ABOUT.WORK' | translate }}</strong></h4>
 
@@ -45,7 +45,7 @@
 
                 <!-- Resume Box / Education -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-graduation-cap"></i></span>
                     <h4><strong>{{ 'ABOUT.EDUCATION' | translate }}</strong></h4>
 
@@ -68,7 +68,7 @@
 
                 <!-- Resume Box / Specialities -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-bullseye"></i></span>
                     <h4><strong>{{ 'ABOUT.SPECIALITIES' | translate }}</strong></h4>
                     <about-speciality title="SPECIALITIES.WEB_DEVELOPMENT"
@@ -88,7 +88,7 @@
 
                 <!-- Resume Box / Skills -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-line-chart"></i></span>
                     <h4><strong>{{ 'ABOUT.SKILLS' | translate }}</strong></h4>
                     <h6><strong>{{ 'SKILLS.PROGRAMMING_LANGUAGES' | translate}}</strong></h6>
@@ -132,7 +132,7 @@
 
                 <!-- Resume Box / Certifications -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-certificate"></i></span>
                     <h4><strong>{{ 'ABOUT.CERTIFICATIONS' | translate }}</strong></h4>
                     <ul class="list-unstyled">
@@ -145,7 +145,7 @@
 
                 <!-- Resume Box / Languages -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-flag"></i></span>
                     <h4><strong>{{ 'ABOUT.LANGUAGES' | translate }}</strong></h4>
 
@@ -160,7 +160,7 @@
 
                 <!-- Resume Box / Hobbies -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-camera"></i></span>
                     <h4><strong>{{ 'ABOUT.INTERESTS' | translate }}</strong></h4>
                     <ul class="list-inline">
@@ -181,9 +181,10 @@
 
                 <!-- Resume Box / Download -->
                 <div class="resume-box">
-                    <span class="icon animated fadeInDown visible" data-animation="fadeInDown"><i
+                    <span class="icon animated fadeInDown visible"><i
                             class="fa fa-download"></i></span>
-                    <a href="resources/cv.pdf" class="btn btn-primary" target="_blank"><span>{{ 'ABOUT.DOWNLOAD' | translate }}</span><i class="ti-file"></i></a>
+                    <a href="resources/cv.pdf" class="btn btn-primary" target="_blank"><span>{{ 'ABOUT.DOWNLOAD' | translate }}</span><i
+                            class="ti-file"></i></a>
                 </div>
 
             </div>
@@ -191,10 +192,6 @@
         </div>
 
 
-
     </div>
 
 </section>
-
-<load-template></load-template>
-
