--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -2,15 +2,17 @@
 <section id="start" class="section fullheight bg-secondary dark padding-v-60">
 
     <!-- BG Image -->
-    <div class="bg-image animated infinite zooming bg-home"></div>
+    <div class="bg-image bg-home animated visible infinite pulse zooming"></div>
 
     <!-- Middle -->
-    <div class="container container-wide v-bottom padding-v-80">
-        <img class="img-circle img-profile margin-b-20" />
-        <h1 class="text-lg margin-b-0">{{ 'HOME.GREETING' | translate }} <strong>{{ 'HOME.TITLE' | translate }}</strong>
+    <div class="container container-wide v-bottom padding-v-60" style="top: 90%;">
+        <img class="img-circle img-profile margin-b-20" data-sr="enter left"/>
+
+        <h1 class="text-lg margin-b-0" data-sr="enter left">{{ 'HOME.GREETING' | translate }} <strong>{{
+            'HOME.TITLE' | translate }}</strong>
         </h1>
-        <h5 class="margin-b-40">{{ 'HOME.DESCRIPTION' | translate }}</h5>
-        <span><a href="#/about" class="btn btn-lg btn-primary"><span>{{ 'ABOUT.ABOUT' | translate }}</span><i
+        <h5 class="margin-b-40" data-sr="wait 3s">{{ 'HOME.DESCRIPTION' | translate }}</h5>
+        <span><a href="#/about" class="btn btn-lg btn-primary" data-sr="vFactor 0.1, scale up 50%"><span>{{ 'ABOUT.ABOUT' | translate }}</span><i
                 class="ti-user"></i></a></span>
     </div>
 
@@ -27,7 +29,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon"><i class="fa fa-pencil text-blue"></i></span>
+                <span class="icon" data-sr="scale up 50%"><i class="fa fa-pencil text-blue"></i></span>
 
                 <h4><strong>{{ 'SERVICES.DESIGN' | translate }}</strong></h4>
 
@@ -37,7 +39,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon"><i class="fa fa-code text-blue"></i></span>
+                <span class="icon" data-sr="scale up 50%"><i class="fa fa-code text-blue"></i></span>
 
                 <h4><strong>{{ 'SERVICES.DEVELOPMENT' | translate }}</strong></h4>
 
@@ -47,7 +49,7 @@
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon"><i class="fa fa-bar-chart text-blue"></i></span>
+                <span class="icon" data-sr="scale up 50%"><i class="fa fa-bar-chart text-blue"></i></span>
 
                 <h4><strong>{{ 'SERVICES.ANALYTICS' | translate }}</strong></h4>
 
@@ -71,7 +73,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/angularjs.png" class="img-home"></i>
                 </span>
 
@@ -83,7 +85,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/nodejs.png" class="img-home"></i>
                 </span>
 
@@ -95,7 +97,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/mongodb.png" class="img-home"></i>
                 </span>
 
@@ -107,7 +109,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/ios.png" class="img-home"></i>
                 </span>
 
@@ -119,7 +121,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/ionic.png" class="img-home"></i>
                 </span>
 
@@ -131,7 +133,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/play.png" class="img-home"></i>
                 </span>
 
@@ -143,7 +145,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/javaee.png" class="img-home"></i>
                 </span>
 
@@ -155,7 +157,7 @@
 
             <div class="col-md-4 col-sm-6 col-xs-12">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/aspnet.png" class="img-home"></i>
                 </span>
 
@@ -167,7 +169,7 @@
 
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
 
-                <span class="icon">
+                <span class="icon" data-sr="scale up 50%">
                     <img src="images/spark.png" class="img-home"></i>
                 </span>
 
@@ -184,5 +186,5 @@
 
 </section>
 
-<load-template></load-template>
+<view-loaded></view-loaded>
 
